--- a/.github/workflows/compile_sketch.yml
+++ b/.github/workflows/compile_sketch.yml
@@ -10,21 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: debug
-        run: |
-          pwd
-          echo "hello world"
-
       # This step makes the contents of the repository available to the workflow
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: debug
-        run: |
-          pwd
-          ls . -al
-          ls  /home/runner/work/Grove_Temper_Humidity/Grove_Temper_Humidity -al
-          # ls  /home/runner/Arduino/libraries/Grove_Temper_Humidity/ -al
 
       # For more information: https://github.com/arduino/compile-sketches#readme
       - name: Compile sketch
@@ -35,6 +23,6 @@ jobs:
             # Configure the action to search all folders under the root of the repository for sketches and compile them.
             # This is formatted as a YAML list, which makes it possible to have multiple sketch paths if needed.
             - examples
-          libraries: |
-              - source-path: /home/runner/work/Grove_Temper_Humidity/Grove_Temper_Humidity
-              - name: Grove Temper Humidity TH02
+          # libraries: |
+          #     - source-path: /home/runner/work/Grove_Temper_Humidity/Grove_Temper_Humidity
+          #     - name: Grove Temper Humidity TH02
